[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://src/main_menu/main/MainScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main_menu/settings/SettingsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main_menu/audio_manager.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/sfx/cancel.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sfx/cursor.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/sfx/confirm.wav" type="AudioStream" id=7]
[ext_resource path="res://src/main_menu/credits/CreditsScreen.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "credits_to_main"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/MainScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/MainScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 1900, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/CreditsScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/CreditsScreen:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/SettingsScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/SettingsScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.12201, 1.12201 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/MainScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/MainScreen:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GUI/CreditsScreen:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GUI/CreditsScreen:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "main_to_credits"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/MainScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/MainScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1900, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/CreditsScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/CreditsScreen:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( -1920, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/SettingsScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/SettingsScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 1900, 1.122 ), Vector2( 1.12201, 1.12201 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/MainScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/MainScreen:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/SettingsScreen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/SettingsScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 1.122, 1.122 ), Vector2( 1900, 1.122 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/MainScreen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/MainScreen:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( -1920, 0 ), Vector2( 0, 0 ) ]
}

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MainScreen" parent="GUI" instance=ExtResource( 2 )]
margin_right = -0.00158691

[node name="SettingsScreen" parent="GUI" instance=ExtResource( 3 )]
visible = false
margin_left = 940.0
margin_right = 2860.0

[node name="CreditsScreen" parent="GUI" instance=ExtResource( 8 )]
visible = false
margin_left = -1920.0
margin_right = -1920.0

[node name="Elements" parent="GUI/CreditsScreen/MainMargin" index="0"]
margin_bottom = 880.0

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 4 )
cursor_sfx = ExtResource( 6 )
confirm_sfx = ExtResource( 7 )
cancel_sfx = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/credits_to_main = SubResource( 1 )
anims/default = SubResource( 2 )
anims/main_to_credits = SubResource( 3 )
anims/main_to_settings = SubResource( 4 )
anims/settings_to_main = SubResource( 5 )

[node name="LevelPreview" type="Spatial" parent="."]

[connection signal="pressed" from="GUI/MainScreen/MainMargin/HBoxContainer/Elements/Buttons/SettingsButton/Button" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="GUI/MainScreen/MainMargin/HBoxContainer/Elements/Buttons/CreditsButton/Button" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="GUI/MainScreen/MainMargin/HBoxContainer/Elements/Buttons/QuitButton/Button" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/Fullscreen/CheckBox" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Display/FOV/HSlider" to="." method="_on_FOV_value_changed"]
[connection signal="value_changed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/LookSensitivity/HSlider" to="." method="_on_LookSensitivity_value_changed"]
[connection signal="pressed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Controls/ControlMapping/Button" to="." method="_on_ControlMapping_pressed"]
[connection signal="value_changed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/SFXVolume/HSlider" to="." method="_on_SFXVolume_value_changed"]
[connection signal="value_changed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Audio/MusicVolume/HSlider" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer/HSplitContainer/VBoxContainer/Effects/ScreenShake/HSlider" to="." method="_on_ScreenShake_value_changed"]
[connection signal="pressed" from="GUI/SettingsScreen/MainMargin/NinePatchRect/MarginContainer2/Back/Button" to="." method="_on_SettingsBackButton_pressed"]
[connection signal="pressed" from="GUI/CreditsScreen/MainMargin/Elements/CreditsMargin/HBoxContainer/PaddingRight/VBoxContainer/CenterContainer2/BackButton" to="." method="_on_CreditsBackButton_pressed"]

[editable path="GUI/MainScreen"]
[editable path="GUI/SettingsScreen"]
[editable path="GUI/CreditsScreen"]
